2006-03-14  David Reveman  <davidr@novell.com>

	* plugins/scale.c: Add darken background option (Daniel G. Taylor).

2006-03-13  David Reveman  <davidr@novell.com>

	* src/display.c (eventLoop):
	* include/compiz.h:
	* src/screen.c (addScreen): CopySubBufferMESA support.

2006-03-07  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (lower_window):
	Remove unused variable tmp.

	* src/event.c:
	* src/display.c:
	* src/window.c:
	* src/screen.c:
	* include/compiz.h: Better window stacking support.

	* gnome/window-decorator/gnome-window-decorator.c: Lower window
	when clicking button 2 on titlebar.

	* src/window.c (ensureWindowVisibility): Only ensure that window is
	visible if it isn't a override redirect window, dock window or
	window with struts.

2006-03-06  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.6.

	* plugins/cube.c: Skydome update. (MacSlow)

	* src/window.c: Ensure window visibility when activating window.

2006-03-05  David Reveman  <davidr@novell.com>

	* src/window.c (closeWindow): Use protocol mask to determine if
	Client Message should be send or if we should kill the client.

	* plugins/decoration.c: Don't draw shadow only decorations around
	windows with alpha channel.

2006-03-03  David Reveman  <davidr@novell.com>

	* src/texture.c (readImageBufferToTexture):
	(readImageToTexture): Check that returnWidth and returnHeight are
	not NULL.

	* plugins/cube.c: Skydome support. Thanks to MacSlow.

	* plugins/fade.c (fadeHandleEvent): Make sure opacity isn't opaque
	when fading out.
	Stop fading if window is resized.

	* src/window.c (resizeWindow): Only verify pixmap size if window is
	mapped.
	(resizeWindow): Check XGetGeometry result.

	* plugins/switcher.c: Make sure switcher is correctly updated
	even though the previously selected window isn't selectable by
	switcher.

	* src/event.c (handleEvent): Avoid panel actions when screen is
	grabbed.
